--- a/20181031-直播大纲.html
+++ b/20181031-直播大纲.html
@@ -57,6 +57,10 @@
 <ul>
 <li><a href="#%E8%A7%86%E9%A2%91%E8%AF%BE%E5%9F%BA%E4%BA%8E%E5%91%BD%E4%BB%A4%E8%A1%8C%E7%9A%84%E7%94%A8%E6%B3%95">视频课：基于命令行的用法</a></li>
 <li><a href="#%E8%A7%86%E9%A2%91%E8%AF%BE%E5%9F%BA%E4%BA%8E-source-tree">视频课：基于 Source Tree</a></li>
+</ul>
+</li>
+<li><a href="#python-%E8%B5%84%E6%96%99%E7%BD%91%E7%9B%98">Python 资料网盘</a>
+<ul>
 <li><a href="#%E6%97%A5%E5%B8%B8%E4%BD%BF%E7%94%A8">日常使用</a></li>
 </ul>
 </li>
@@ -218,6 +222,10 @@
 <h3 id="%E8%A7%86%E9%A2%91%E8%AF%BE%E5%9F%BA%E4%BA%8E-source-tree">视频课：基于 Source Tree</h3>
 <p>早期为实验室录制的课程，仅供参考。</p>
 <p>链接:<a href="https://pan.baidu.com/s/1E6QiCgNfoW3KBNctoyjjEQ">https://pan.baidu.com/s/1E6QiCgNfoW3KBNctoyjjEQ</a>  密码:d77p</p>
+<h2 id="python-%E8%B5%84%E6%96%99%E7%BD%91%E7%9B%98">Python 资料网盘</h2>
+<p>百度网盘下载限速，体验不太好，先将就一下。</p>
+<p>链接:<a href="https://pan.baidu.com/s/1xgJ_SqUZiwWn_yTVyTWoqA">https://pan.baidu.com/s/1xgJ_SqUZiwWn_yTVyTWoqA</a>  密码:8p8d</p>
+<p>目前没有任何资料，以后我录制的视频，以及比较大型的文件，都会放在这里。</p>
 <h3 id="%E6%97%A5%E5%B8%B8%E4%BD%BF%E7%94%A8">日常使用</h3>
 <ul>
 <li>请大家注册coding.net的账号，并关注我，我现场拉大家进项目。</li>
