--- a/20181031-直播大纲.html
+++ b/20181031-直播大纲.html
@@ -38,7 +38,11 @@
 <li><a href="#%E8%AE%A8%E8%AE%BA%E7%9A%84%E5%9F%BA%E6%9C%AC%E5%8E%9F%E5%88%99">讨论的基本原则</a></li>
 </ul>
 </li>
-<li><a href="#%E6%8F%90%E9%97%AE%E7%9A%84%E6%99%BA%E6%85%A7">提问的智慧</a></li>
+<li><a href="#%E6%8F%90%E9%97%AE%E7%9A%84%E6%99%BA%E6%85%A7">提问的智慧</a>
+<ul>
+<li><a href="#%E5%B0%8F%E9%BB%84%E9%B8%AD%E8%B0%83%E8%AF%95%E6%B3%95">小黄鸭调试法</a></li>
+</ul>
+</li>
 <li><a href="#%E4%BC%98%E7%A7%80%E7%9A%84%E5%AD%A6%E4%B9%A0%E6%96%B9%E6%B3%95">优秀的学习方法</a>
 <ul>
 <li><a href="#%E5%AD%A6%E4%B9%A0%E6%98%AF%E7%97%9B%E8%8B%A6%E7%9A%84">学习是痛苦的</a></li>
@@ -186,6 +190,14 @@
 </ul>
 </li>
 </ul>
+<h2 id="%E5%B0%8F%E9%BB%84%E9%B8%AD%E8%B0%83%E8%AF%95%E6%B3%95">小黄鸭调试法</h2>
+<blockquote>
+<p>转自百度百科。</p>
+</blockquote>
+<p>传说中程序大师随身携带一只小黄鸭，在调试代码的时候会在桌上放上这只小黄鸭，然后详细地向鸭子解释每行代码。</p>
+<p>许多程序员都有过向别人（甚至可能向完全不会编程的人）提问及解释编程问题，就在解释的过程中击中了问题的解决方案。一边阐述代码的意图一边观察它实际上的意图并做调试，这两者之间的任何不协调会变得很明显，并且更容易发现自己的错误。</p>
+<p>有一种现象叫做cone of answers，这是一个常见的现象。你的朋友跑来问你一个问题，但是当他自己把问题说完，或者说到一半的时候就想出了答案走了，留下一脸茫然的你。是的，这个时候你就起到了那只小黄鸭的作用。</p>
+<p>相似的概念还有不少，例如自白调试、纸板程序员或程序员的假人、想出脑外等等。总的来说，在你试图表述自己的想法的过程中，自然地在促使自己去整理思路，重新考虑问题。</p>
 <h1 id="%E4%BC%98%E7%A7%80%E7%9A%84%E5%AD%A6%E4%B9%A0%E6%96%B9%E6%B3%95">优秀的学习方法</h1>
 <h2 id="%E5%AD%A6%E4%B9%A0%E6%98%AF%E7%97%9B%E8%8B%A6%E7%9A%84">学习是痛苦的</h2>
 <p>因为不懂，所以要学。学习就是去陌生的领域探索的过程，这怎么可能是舒服的？如果有人觉得爽，要么是喜欢自虐，要么就是感受到了战胜自己的喜悦。</p>
