--- a/20181031-直播大纲.html
+++ b/20181031-直播大纲.html
@@ -69,6 +69,7 @@
 </ul>
 </li>
 <li><a href="#%E5%AD%A6%E4%B9%A0-markdown">学习 markdown</a></li>
+<li><a href="#%E5%88%9B%E5%BB%BA%E4%B8%AA%E4%BA%BA%E6%A1%A3%E6%A1%88">创建个人档案</a></li>
 </ul>
 </li>
 <li><a href="#%E5%AD%A6%E4%B9%A0%E8%8A%82%E5%A5%8F">学习节奏</a>
@@ -89,6 +90,7 @@
 </ul>
 <!-- /TOC -->
 <h1 id="%E5%89%8D%E8%A8%80">前言</h1>
+<p>作为一种新形态的学习小组，很多细节尚需磨合，请大家多一点耐心，找出一条最适合我们的方式。</p>
 <h2 id="%E6%89%BF%E8%AE%A4%E8%87%AA%E5%B7%B1%E5%B9%B6%E9%9D%9E%E5%85%A8%E7%9F%A5%E5%85%A8%E8%83%BD">承认自己并非全知全能</h2>
 <p>这是困难的，也是现实的，请大家务必相信「没有全知全能的人」。</p>
 <h2 id="%E8%BF%99%E5%8D%8A%E5%B9%B4%E5%8F%AF%E8%83%BD%E5%AF%B9%E6%88%91%E4%BB%AC%E5%BE%88%E6%9C%89%E6%84%8F%E4%B9%89">这半年，可能对我们很有意义</h2>
@@ -258,6 +260,9 @@
 <p>在 git 中提交总结、编写日志、知识文档，一律使用markdown语法，务必学习。</p>
 <p>参考文章：<a href="https://www.jianshu.com/p/2e52f1fae9ff">https://www.jianshu.com/p/2e52f1fae9ff</a></p>
 <p>参考文章：<a href="https://dev.tencent.com/help/doc/project/markdown.html">https://dev.tencent.com/help/doc/project/markdown.html</a></p>
+<h2 id="%E5%88%9B%E5%BB%BA%E4%B8%AA%E4%BA%BA%E6%A1%A3%E6%A1%88">创建个人档案</h2>
+<p>参考文件 <code>git/notes/wl/README.md</code> ，编写你的个人档案「基本不涉及隐私」。</p>
+<p>将我的个人档案另存一份，放在<code>notes/你的用户名/README.md</code>，修改相关内容，提交即可。</p>
 <h1 id="%E5%AD%A6%E4%B9%A0%E8%8A%82%E5%A5%8F">学习节奏</h1>
 <h2 id="%E5%AD%A6%E4%B9%A0%E8%B5%84%E6%96%99">学习资料</h2>
 <p>我会将所有的学习资料，存放在 <code>/doc/</code> 文件夹之下。</p>
